--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"Suche">
 <!ENTITY Ctr_ctroldsearch	"Alte Suche">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
-<!ENTITY Ctr_ctroldsearchr	"Nach der Suche zur Standardsuchmaschine wechseln">
+<!ENTITY Ctr_ctroldsearchr	"Nach der Suche zur ersten Suchmaschine in der Liste wechseln">
 <!ENTITY Ctr_search_oit		"Suche in neuem Tab öffnen (about:config-Einstellung)">
 <!ENTITY Ctr_osearch_meoit	"Mittelklick: Suche im Vordergrund-Tab öffnen">
 <!ENTITY Ctr_osearch_iwidth	"Popupbreite automatisch der Suchfeldbreite anpassen">
