--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"Αναζήτηση">
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
 <!ENTITY Ctr_search_oit		"Άνοιγμα αναζήτησης σε νέα καρτέλα (προτίμηση «about:config»)">
 <!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: αναζήτηση σε νέα καρτέλα στο προσκήνιο">
 <!ENTITY Ctr_osearch_iwidth	"Αυτόματη ρύθμιση εύρους αναδυόμενου">
