--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -126,10 +126,10 @@
 <!ENTITY Ctr_options_rem	"Mémoriser la dernière catégorie sélectionnée">
 <!ENTITY Ctr_svgfilters		"Couleurs SVG pour les icônes des boutons de barres d'outils par défaut">
 <!ENTITY Ctr_wincontrols	"Rendre mobiles les commandes de la fenêtre en plein écran">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_puibuttonsep	"Séparateur du bouton de menu :">
+<!ENTITY Ctr_puibut_no_sep	"Masqué">
+<!ENTITY Ctr_puibut_l_sep	"À gauche">
+<!ENTITY Ctr_puibut_r_sep	"À droite">
 <!ENTITY Ctr_html5warning	"Afficher l'avertissement de passage en plein écran pour les vidéos HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Images de « domaine de premier niveau » : apparence classique">
 <!ENTITY Ctr_altalertbox	"« Boites de notification » : apparence alternative">
@@ -137,7 +137,7 @@
 <!ENTITY Ctr_mstatusbar		"Rendre mobile le panneau de la barre d'état">
 <!ENTITY Ctr_mstatusbars4e	"Le panneau de la barre d'état est contrôlé par « Status-4-Evar ».">
 <!ENTITY Ctr_mstatusbartpp	"Le panneau de la barre d'état est contrôlé par « The Puzzle Piece ».">
-<!ENTITY Ctr_mstatusbarpzt	"Le panneau de la barre d'état est contrôlé par « Puzzle Toolbars ».">
+<!ENTITY Ctr_mstatusbarpzt	"Le panneau de la barre d'état est contrôlé par « Puzzle Bars ».">
 <!ENTITY Ctr_mstatusbarabr	"Le panneau de la barre d'état est contrôlé par « The Addon Bar (Restored) ».">
 <!ENTITY Ctr_combrelstop 	"« Arrêter » &amp; « Actualiser » : combiner les boutons sur la barre d'outils">
 <!ENTITY Ctr_stoprel1		"Important : positionner le bouton « Actualiser » après le bouton « Arrêter » !">
@@ -165,11 +165,11 @@
 <!ENTITY Ctr_search_ui		"Barre de recherche">
 <!ENTITY Ctr_ctroldsearch	"Utiliser l'ancienne interface de barre de recherche">
 <!ENTITY Ctr_ctroldsearchc	"Effacer le contenu de la barre après une recherche">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"Revenir au moteur de recherche par défaut après une recherche">
 <!ENTITY Ctr_search_oit		"Ouvrir la recherche dans un nouvel onglet (paramètre about:config)">
 <!ENTITY Ctr_osearch_meoit	"Clic milieu : rechercher dans un nouvel « onglet au premier plan »">
 <!ENTITY Ctr_osearch_iwidth	"Ajuster automatiquement la largeur de la fenêtre surgissante">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_cwidth	"Largeur personnalisée pour la fenêtre surgissante">
 <!ENTITY Ctr_osearch_dm		"Réduire la taille du bouton de liste déroulante">
 <!ENTITY Ctr_addonmanager	"Gestionnaire de modules">
 <!ENTITY Ctr_alt_addonsp	"Page « Plus » : ordre alternatif">
@@ -305,7 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Enlever la couleur d'arrière-plan/le brouillard (Aero Glass de Windows/Windows 8)">
 
 <!ENTITY Ctr_aerocolors		"Utiliser des couleurs Aero bleues (pour les onglets également)">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolorsg	"Utiliser des couleurs Aero bleues/grises">
 <!ENTITY Ctr_transpttbw10	"Barres d'outils des onglets/du menu/de titre : enlever la couleur d'arrière-plan">
 <!ENTITY Ctr_transpttbew10	"Réglages supplémentaires pour certains thèmes du système d'exploitation">
 <!ENTITY Ctr_transptcw10	"Masquer les boutons Réduire/Agrandir/Fermer par défaut du système d'exploitation">
