--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Ricerca vecchio stile">
 <!ENTITY Ctr_ctroldsearchc	"Pulisci la casella di ricerca dopo aver effettuato la ricerca">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
 <!ENTITY Ctr_search_oit		"Apri la ricerca in una nuova scheda (preferenza in  about:config)">
 <!ENTITY Ctr_osearch_meoit	"Clic sul tasto centrale: ricerca in una nuova scheda attiva">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
