--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"検索バー">
 <!ENTITY Ctr_ctroldsearch	"古い検索スタイル">
 <!ENTITY Ctr_ctroldsearchc	"検索後に検索ボックスを消去する">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"検索後に検索エンジンをデフォルトに戻す">
 <!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く (about:config 設定)">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
@@ -304,8 +304,8 @@
 <!ENTITY Ctr_altmenubarpos2	"&brandShortName; タイトルバーの下">
 <!ENTITY Ctr_menubarnofog	"背景色とぼかしを取り除く (Windows AeroGlass / Win8)">
 
-<!ENTITY Ctr_aerocolors		"ツールバーとタブを Blue Aero カラーにする">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolors		"ツールバーとタブを Aero カラーにする">
+<!ENTITY Ctr_aerocolorsg	"グレー系の Aero カラーにする">
 <!ENTITY Ctr_transpttbw10	"タイトル/メニュー/タブ ツールバー: 背景色を取り除く">
 <!ENTITY Ctr_transpttbew10	"いくつかのシステムテーマのための追加の微調整">
 <!ENTITY Ctr_transptcw10	"システムデフォルトのボタンを隠す (最小化/最大化/閉じる)">
