--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"Поиск">
 <!ENTITY Ctr_ctroldsearch	"Старый поиск">
 <!ENTITY Ctr_ctroldsearchc	"Очистить форму после поиска">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
 <!ENTITY Ctr_search_oit		"Открывать поиск в новой вкладке (настройка about:config)">
 <!ENTITY Ctr_osearch_meoit	"Средний-клик: поиск в новой активной вкладке">
 <!ENTITY Ctr_osearch_iwidth	"Автонастройка ширины всплывающего меню">
