--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"Buscar">
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña (about:config >> browser.search.openintab)">
 <!ENTITY Ctr_osearch_meoit	"Clic central: Busqueda en una nueva 'pestaña en primer plano'">
 <!ENTITY Ctr_osearch_iwidth	"Ajustar automáticamente anchura del menú emergente">
