--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_search_ui		"Iskanje">
 <!ENTITY Ctr_ctroldsearch	"Staro iskanje">
 <!ENTITY Ctr_ctroldsearchc	"Počisti iskalno polje po iskanju">
-<!ENTITY Ctr_ctroldsearchr	"Po iskanju povrni iskalnik na privzetega">
+<!ENTITY Ctr_ctroldsearchr	"Po iskanju povrni iskalnik na prvega s seznama">
 <!ENTITY Ctr_search_oit		"Odpri iskanje v novem zavihku (možnost about:config)">
 <!ENTITY Ctr_osearch_meoit	"Srednji kliki: išči v novem 'zavihku v ospredju'">
 <!ENTITY Ctr_osearch_iwidth	"Samodejno prilagodi širino pojavnega okna">
