--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Některá nastavení nejsou kompatibilní s rozšířením 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Tlačítko aplikace není kompatibilní s rozšířením 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"Tlačítko aplikace">
 <!ENTITY Ctr_appbutton0		"Tlačítko zakázáno">
