--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -72,8 +72,9 @@
 <!ENTITY Ctr_closetabbig	"Größeres Symbol (20x20 px)">
 <!ENTITY Ctr_close_wwltab	"Fenster mit nur einem sichtbaren Tab schließen (about:config-Einstellung)">
 
-<!ENTITY Ctr_hctpinfotab	"Einige Tabvarianten sind nicht kompatibel zu 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_hctpinfoab		"Die Titelleisten-Schaltfläche ist nicht kompatibel zu 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_hctpinfotab	"Einige Tabvarianten sind nicht kompatibel mit 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_hctpinfoab		"Die Titelleisten-Schaltfläche ist nicht kompatibel mit 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_tobainfotab	"Die Erweiterung 'Tabs on Bottom' ist nicht kompatibel mit '&Ctr_title;' und sollte deaktiviert werden. Benutze stattdessen die hier vorhandenen 'Tabs Unten' Einstellugen!">
 
 <!ENTITY Ctr_appbutton		"&brandShortName;-Schaltfläche">
 <!ENTITY Ctr_appbutton0		"Deaktiviert">
