--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Někotare rejtarkowe warianty njejsu kompatibelne z rozšyrjenim 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Tłocašk na titelowej rědce njejo kompatibelny z rozšyrjenim 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"Tłocašk &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Tłocašk znjemóžnjony">
