--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Κάποιες παραλλαγές καρτελών δεν είναι συμβατές με την επέκταση «Hide Caption Titlebar Plus».">
 <!ENTITY Ctr_hctpinfoab		"Το κουμπί στη γραμμή τίτλου δεν είναι συμβατό με την επέκταση «Hide Caption Titlebar Plus».">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"Κουμπί &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Απενεργοποιημένο">
