--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Certaines modifications d'onglets ne sont pas compatibles avec le module « Hide Caption Titlebar Plus ».">
 <!ENTITY Ctr_hctpinfoab		"Le bouton sur la barre de titre n'est pas compatible avec le module « Hide Caption Titlebar Plus ».">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"Ancien bouton &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Désactivé">
