--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"部分标签页变化与 “Hide Caption Titlebar Plus” 扩展不兼容。">
 <!ENTITY Ctr_hctpinfoab		"标题栏上的按钮与 “Hide Caption Titlebar Plus” 扩展不兼容。">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"应用程序按钮">
 <!ENTITY Ctr_appbutton0		"按钮已禁用">
