--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Nogle varianter af faneblade er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Knapper på titellinje er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"&brandShortName;-knap">
 <!ENTITY Ctr_appbutton0		"Deaktivér knap">
