--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -74,6 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Někotre rajtarkowe warianty z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njejsu.">
 <!ENTITY Ctr_hctpinfoab		"Tłóčatko na titulnej lajsće z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njeje.">
+<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
 
 <!ENTITY Ctr_appbutton		"Tłóčatko &brandShortName;">
 <!ENTITY Ctr_appbutton0		"Tłóčatko znjemóžnjeny">
